[gd_scene load_steps=7 format=2]

[ext_resource path="res://anima-preview.png" type="Texture" id=1]
[ext_resource path="res://AnimationsPreview.gd" type="Script" id=2]
[ext_resource path="res://Lato-Regular.ttf" type="DynamicFontData" id=3]

[sub_resource type="DynamicFont" id=4]
size = 64
use_mipmaps = true
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.101961, 0.12549, 0.172549, 1 )

[sub_resource type="StyleBoxFlat" id=3]
content_margin_left = 12.0
content_margin_right = 12.0
content_margin_top = 12.0
content_margin_bottom = 12.0
bg_color = Color( 0.14902, 0.172549, 0.231373, 1 )

[node name="AnimationsPreview" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 1000, 600 )
script = ExtResource( 2 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
margin_right = 700.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ControlLabel" type="Label" parent="HBoxContainer/VBoxContainer"]
margin_right = 700.0
margin_bottom = 14.0
text = "Control node:"

[node name="ControlContainer" type="CenterContainer" parent="HBoxContainer/VBoxContainer"]
margin_top = 18.0
margin_right = 700.0
margin_bottom = 294.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ControlTest" type="Label" parent="HBoxContainer/VBoxContainer/ControlContainer"]
margin_left = 259.0
margin_top = 99.0
margin_right = 440.0
margin_bottom = 177.0
custom_fonts/font = SubResource( 4 )
text = "Anima"

[node name="HSeparator" type="HSeparator" parent="HBoxContainer/VBoxContainer"]
margin_top = 298.0
margin_right = 700.0
margin_bottom = 302.0

[node name="SpriteLabel" type="Label" parent="HBoxContainer/VBoxContainer"]
margin_top = 306.0
margin_right = 700.0
margin_bottom = 320.0
text = "Sprite node:"

[node name="SpriteContainer" type="CenterContainer" parent="HBoxContainer/VBoxContainer"]
margin_top = 324.0
margin_right = 700.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Control2" type="Control" parent="HBoxContainer/VBoxContainer/SpriteContainer"]
margin_left = 350.0
margin_top = 138.0
margin_right = 350.0
margin_bottom = 138.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="SpriteTest" type="Sprite" parent="HBoxContainer/VBoxContainer/SpriteContainer/Control2"]
texture = ExtResource( 1 )

[node name="ScrollContainer" type="ScrollContainer" parent="HBoxContainer"]
margin_left = 704.0
margin_right = 1024.0
margin_bottom = 600.0
rect_min_size = Vector2( 320, 0 )
custom_styles/bg = SubResource( 2 )

[node name="PanelContainer" type="PanelContainer" parent="HBoxContainer/ScrollContainer"]
margin_right = 320.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/panel = SubResource( 3 )

[node name="ListContainer" type="VBoxContainer" parent="HBoxContainer/ScrollContainer/PanelContainer"]
margin_left = 12.0
margin_top = 12.0
margin_right = 308.0
margin_bottom = 588.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 8

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/ScrollContainer/PanelContainer/ListContainer"]
margin_right = 296.0
margin_bottom = 24.0

[node name="Label" type="Label" parent="HBoxContainer/ScrollContainer/PanelContainer/ListContainer/HBoxContainer"]
margin_top = 5.0
margin_right = 132.0
margin_bottom = 19.0
text = "Duration in seconds:"

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/ScrollContainer/PanelContainer/ListContainer/HBoxContainer"]
margin_left = 136.0
margin_right = 296.0
margin_bottom = 24.0
size_flags_horizontal = 3

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/ScrollContainer/PanelContainer/ListContainer/HBoxContainer/VBoxContainer"]
margin_right = 160.0
margin_bottom = 24.0

[node name="DurationEdit" type="LineEdit" parent="HBoxContainer/ScrollContainer/PanelContainer/ListContainer/HBoxContainer/VBoxContainer/HBoxContainer"]
margin_right = 160.0
margin_bottom = 24.0
hint_tooltip = "Speed value in seconds"
size_flags_horizontal = 3
text = "0.5"
align = 2
placeholder_text = "Speed in ms"
caret_blink = true
caret_blink_speed = 0.5

[node name="VBoxContainer" type="HBoxContainer" parent="HBoxContainer/ScrollContainer/PanelContainer/ListContainer"]
margin_top = 32.0
margin_right = 296.0
margin_bottom = 56.0

[node name="ControlCheckbox" type="CheckBox" parent="HBoxContainer/ScrollContainer/PanelContainer/ListContainer/VBoxContainer"]
margin_right = 146.0
margin_bottom = 24.0
size_flags_horizontal = 3
pressed = true
text = "Control node"

[node name="SpriteCheckbox" type="CheckBox" parent="HBoxContainer/ScrollContainer/PanelContainer/ListContainer/VBoxContainer"]
margin_left = 150.0
margin_right = 296.0
margin_bottom = 24.0
size_flags_horizontal = 3
pressed = true
text = "Sprite node"

[node name="Timer" type="Timer" parent="."]
one_shot = true

[connection signal="pressed" from="HBoxContainer/ScrollContainer/PanelContainer/ListContainer/VBoxContainer/ControlCheckbox" to="." method="_on_ControlCheckbox_pressed"]
[connection signal="pressed" from="HBoxContainer/ScrollContainer/PanelContainer/ListContainer/VBoxContainer/SpriteCheckbox" to="." method="_on_SpriteCheckbox_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
